Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-31782

Error handling on Dashboard should handle some cases more specifically

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 15.0.0-beta2
    • Qt Creator 15.0.0
    • Axivion
    • None
    • ca9e9f7af (15.0)

      many errors only appear in "General Messages", but likely should somehow be presented in regular UI. The space where the issue-table is rendered would probably make for a nice place to non-disturbingly and discoverably print such errors because most network errors anyway will lead to no valid table data being displayable. VsCode-like toasters might be another option, not sure whether QtCreator offers something like that.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            cstenger Christian Stenger
            daniel_hofmann Daniel Hofmann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes