Axivion: Improve error message handling

Provide essential errors directly on the issues table.

Fixes: QTCREATORBUG-31782
Fixes: QTCREATORBUG-31783
Change-Id: Ied0f48f262d98a05cf2e8550eb7397cfaaa697da
Reviewed-by: hjk <hjk@qt.io>
Reviewed-by: Mohammad Mehdi Salem Naraghi <mehdi.salem@qt.io>