src/plugins/axivion/axivionperspective.h
@@ -10,6 +10,7 @@ namespace Axivion::Internal {
 void setupAxivionPerspective();
 void updateDashboard();
 void showFilterException(const QString &errorMessage);
+void showErrorMessage(const QString &errorMessage);
 void reinitDashboard(const QString &projectName);
 void resetDashboard();
 void updateIssueDetails(const QString &html);
